--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quickstart",
+  "name": "oneplus",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,23 +12,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.2",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.0.2",
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
+    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "@material/grid-list": "^0.35.0",
+    "@types/lodash": "^4.14.109",
+    "bootstrap": "^4.0.0-alpha.6",
+    "core-js": "^2.5.7",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "primeng": "^6.0.0-alpha.1",
+    "rxjs": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.6.7",
+    "@angular/cli": "^6.0.7",
     "@angular/compiler-cli": "^6.0.2",
-    "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.3",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -43,6 +50,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
